--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   provider: ^6.0.5
   ant_design_flutter: ^0.0.1+5
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
