--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   ant_design_flutter: ^0.0.1+5
   cached_network_image: ^3.2.3
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
